# car_insurance_telematics

./: .gitignore  Makefile  README.md  pyproject.toml  temp_input.csv
car_insurance_telematics/: README.md  README_ML_PIPELINE.md  data_loader.py  feature_engineering.py  main.py  preprocess.py  utils.py
car_insurance_telematics/data_generation/: json_sample_generation.py
car_insurance_telematics/modeling/: README.md  claim_probability_model.py  claim_severity_model.py  feature_engineer.py  inference_pipeline.py  model_evaluator.py  model_registry.py  model_trainer.py  run_inference.py  train_models.py
car_insurance_telematics/preprocess/: config.py
data/archive/: driver_aggregated_features.csv  telematics_trips_data.csv
data/ml_results/: claim_probability_random_forest_results.json  claim_probability_xgboost_results.json  claim_severity_random_forest_results.json  claim_severity_xgboost_results.json  model_comparison.json  predictions_20250712_195311.csv  predictions_20250712_195311_summary.json  predictions_20250712_195336.csv  predictions_20250712_195336_summary.json  predictions_20250712_195657.csv  predictions_20250712_195657_summary.json  predictions_20250712_205101.csv  predictions_20250712_205101_summary.json  predictions_20250712_234722.csv  predictions_20250712_234722_summary.json  sample_input_data.csv  training_summary.json
model_registry/: registry.json
notebooks/: 01_feature_engineering.ipynb  02_xgboost_claim_prediction.ipynb  03_xgboost_claim_severity.ipynb  inference_check.ipynb  poc.ipynb  raw_etl.ipynb  telematics_eda.ipynb
(+56 files in other folders)
