[project]
name = "car_insurance_telematics"
version = "0.1.0"
description = ""
authors = [
    {name = "Ali Zarreh",email = "alireza.zarreh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
scikit-learn = "^1.7.0"
autoflake = "^2.3.1"
black = "^25.1.0"
isort = "^6.0.1"
xgboost = "^3.0.2"
optuna = "^4.4.0"
optuna-integration = {extras = ["xgboost"], version = "^4.4.0"}
